# keasy

./: .dockerignore  .env.example  .gitignore  Dockerfile.server  Dockerfile.web  Makefile  README.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  openapi.json
.github/: renovate.json
.github/workflows/: images.yml  server-ci.yml  web-ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/02-api-architecture-refactor/: 02-01-SUMMARY.md  02-02-SUMMARY.md
.planning/phases/02.1-domain-consolidation-merge-scattered-modules-into-cohesive-domain-folders/: 02.1-01-PLAN.md  02.1-01-SUMMARY.md  02.1-02-PLAN.md  02.1-02-SUMMARY.md  02.1-CONTEXT.md  02.1-RESEARCH.md  02.1-VERIFICATION.md
.planning/phases/03-auth-routes-session-middleware/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
.planning/phases/04-tenant-context-middleware-rbac/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-SUMMARY.md
.planning/phases/05-frontend-auth-pages-session-management/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-03-SUMMARY.md
.planning/phases/06.1-middleware-route-guard-fix/: 06.1-01-SUMMARY.md
caddy/: Caddyfile
control-plane/: Cargo.toml  Dockerfile
control-plane/src/: config.rs  docker.rs  main.rs  manifest.rs  provisioner.rs  store.rs
deploy/: README.md
infra/: README.md
infra/caddy/: Caddyfile  Caddyfile.prod
infra/dev/: dex.yaml
infra/seeds/: dev-participant.sql  dev-promotor.sql  dev-seed.sql  minio-cors.json  participant.sql  promotor.sql
infra/stack/: README.md  base.yml  bootstrap.sh  cp.sh  kc-mint-tf-client.sh  teardown.sh  tf.sh
infra/terraform/: README.md
keycloak/: Cargo.toml
keycloak/realm-import/: keasy-realm.json
keycloak/src/: admin.rs  lib.rs
server/: Cargo.toml  Dockerfile  Dockerfile.dev  diesel.toml  entrypoint.sh  litestream.yml
server/examples/: players.fossil
server/src/: config.rs  crypto.rs  error.rs  health.rs  lib.rs  main.rs  openapi.rs  router.rs  script.rs  sse.rs  startup.rs  tenant.rs
server/src/ai/: client.rs  context.rs  db.rs  mod.rs  models.rs  profiler.rs  routes.rs
server/src/assistant/: models.rs  routes.rs
server/src/auth/: errors.rs  handlers.rs  mod.rs  models.rs  oidc.rs  onboard.rs  password.rs  rate_limit.rs  routes.rs  session_store.rs  sidecar_health.rs  vc_routes.rs  wallet_routes.rs
server/src/catalog/: mod.rs  reconcile.rs  routes.rs  secret.rs  view.rs
server/src/cloud/: db.rs  mod.rs  models.rs  reader.rs  resolver.rs  routes.rs  tee_resolver.rs
server/src/cloud_accounts/: db.rs  errors.rs  models.rs  resolver.rs  routes.rs
server/src/connections/: db.rs  errors.rs  models.rs  routes.rs
server/src/connectors/: builders.rs  config.rs  db.rs  error.rs  handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  schema.rs  secrets.rs  service.rs  storage.rs  test.rs  types.rs
server/src/connectors/types/: azure.rs  gcs.rs  local_fs.rs  mod.rs  s3.rs
server/src/conversations/: mod.rs  models.rs  routes.rs
server/src/dataspaces/: db.rs
server/src/db/: cloud_accounts.rs  connections.rs  conversations.rs  dataspaces.rs  diesel_schema.rs  invite_tokens.rs  jobs.rs  mod.rs  oidc_clients.rs  org_gaiax.rs  org_members.rs  organizations.rs  schema.rs  secrets.rs  seed.rs  session_store.rs  sessions.rs  settings.rs  users.rs  workspaces.rs
server/src/dcat/: extract.rs  generator.rs  types.rs
server/src/discovery/: convert.rs  dcat_extract.rs  dcat_generator.rs  graph_store.rs  graph_types.rs  loader.rs  mcp.rs  mod.rs  rdf_graph.rs  routes.rs  validation.rs  validation_routes.rs  validation_types.rs
server/src/email/: mod.rs  templates.rs
server/src/executor/: builders.rs  duckdb.rs  engine.rs  fossil.rs  fossil_analysis.rs  mod.rs  path_resolver.rs  runner.rs  script.rs  scripts.rs
server/src/gaia_x/: cert.rs  credentials.rs  db.rs  gxdch.rs  handlers.rs  issuer_client.rs  issuer_routes.rs  keys.rs  mod.rs  org_gaiax.rs  repository.rs  routes.rs  signing.rs  vc_client.rs  vp.rs  wallet_routes.rs
server/src/gaia_x/gxdch/: mock.rs  mod.rs  real.rs
server/src/graph/: catalog.rs  convert.rs  dataset.rs  format.rs  fragment.rs  loader.rs  manifest.rs  mod.rs  oxigraph_client.rs  rdf_graph.rs  routes.rs  types.rs  vocab.rs
server/src/graph/dcat/: extract.rs  generator.rs  materializer.rs  mod.rs  types.rs
server/src/job/: errors.rs  mod.rs  runner.rs  store.rs  types.rs
server/src/jobs/: db.rs  duckdb_engine.rs  errors.rs  executor.rs  fossil_runner.rs  fossil_sources.rs  handlers.rs  mod.rs  models.rs  path_resolver.rs  pipeline_extract.rs  pipeline_types.rs  repository.rs  rewrite.rs  routes.rs  run_creds.rs  runner.rs  script.rs  service.rs
server/src/keycloak/: admin.rs
server/src/middleware/: audit.rs  auth.rs  mod.rs  session_auth.rs  tenant.rs
server/src/org/: admin.rs  admin_handlers.rs  db.rs  handlers.rs  invite_tokens.rs  mod.rs  models.rs  org_members.rs  organizations.rs  repository.rs  routes.rs  service.rs
server/src/pipeline/: extract.rs  mod.rs
server/src/rdf/: format.rs
server/src/routes/: admin.rs  cloud_accounts.rs  connections.rs  conversations.rs  fossil_analysis.rs  fossil_lsp.rs  graph.rs  health.rs  jobs.rs  mod.rs  org.rs  providers.rs  scripts.rs  settings.rs  validation.rs
server/src/script/: mod.rs  rewrite.rs
server/src/services/: external.rs  mod.rs
server/src/settings/: accounts.rs  ai.rs  connections.rs  crypto.rs  db.rs  file_store.rs  handlers.rs  mod.rs  org.rs  preferences.rs  repository.rs  routes.rs  schema.rs  types.rs
server/src/validation/: logic.rs  mod.rs  routes.rs  types.rs
server/tests/: auth_smoke.rs  dump_openapi.rs  fossil_subprocess.rs  tenant_isolation.rs
web/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
web/scripts/: copy-fossil-wasm.mjs  extract-connector-schemas.mjs
web/src/: middleware.ts  proxy.ts
(+491 files in other folders)
