[package]
name = "keasy-control-plane"
version = "0.1.0"
edition = "2024"
description = "Workspace provisioner — creates OIDC clients + brings up tenant instance stacks (Docker API)"

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
# Reuse the exact Keycloak admin client the instances use (OIDC client registration).
keasy-keycloak = { path = "../keycloak" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.10", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# The control-plane renders a parameterized compose template per workspace and
# drives `docker compose` over the Docker socket — the ONLY component with that
# (privileged) access, isolated from the tenant instances.
