[package]
name = "keasy-control-plane"
version = "0.1.0"
edition = "2024"
description = "Workspace provisioner — creates OIDC clients + brings up tenant instance stacks (Docker API)"

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
# Reuse the exact Keycloak admin client the instances use (OIDC client registration).
keasy-keycloak = { path = "../keycloak" }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Per-tenant declarative specs (`deploy/environments/<env>/tenants/*.yaml`).
serde_yaml_ng = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
thiserror = "2"
# Durable workspace registry (the one piece of provisioner state). Bundled SQLite,
# same as keasy-server — schema-in-code + `PRAGMA user_version` migrations.
rusqlite = { version = "0.37", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# The control-plane renders a parameterized compose template per workspace and
# drives `docker compose` over the Docker socket — the ONLY component with that
# (privileged) access, isolated from the tenant instances.

[dev-dependencies]
# Temp dirs for the manifest fs-loader test (real versions.env + tenants/*.yaml).
tempfile = "3"
