[package]
name = "keasy-keycloak"
version = "0.1.0"
edition = "2024"
description = "Keycloak Admin REST client shared by keasy-server and the control-plane"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.10", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
