[package]
name = "keasy-server"
version = "0.1.0"
description = "Fossil HTTP server for API-driven pipeline execution"
homepage = ""
repository = ""
documentation = ""
license = ""
categories = ["database"]
keywords = [""]
default-run = "keasy-server"
authors = ["Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>"]
edition = "2024"
rust-version = "1.90.0"

[dependencies]
thiserror = "2"
jiff = "0.2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
diesel = { version = "2.2", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
deadpool-diesel = { version = "0.6", features = ["sqlite"] }
tower-http = { version = "0.6", features = ["trace", "cors", "set-header"] }
tower = { version = "0.5", features = ["util"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
object_store = { version = "0.12", features = ["aws", "gcp", "azure"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
lru = "0.12"
url = "2"
regex = "1"
aes-gcm = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
openidconnect = { version = "4.0", features = ["reqwest"] }
oauth2 = "5.0"
http = "1"
secrecy = { version = "0.10", features = ["serde"] }
tower-sessions = { version = "0.14", features = ["signed"] }
tower-sessions-core = { version = "0.14", features = ["deletion-task"] }
rmp-serde = "1"
async-trait = "0.1"
time = "0.3"
polars = { version = "0.52", features = ["cloud", "aws", "azure", "gcp", "round_series"] }
fossil-lang = { path = "../../../ikigai-core/lib/fossil-lang", features = ["utoipa"] }
fossil-rdf = { path = "../../../ikigai-core/lib/fossil-rdf", features = ["utoipa"] }
fossil-stdlib = { path = "../../../ikigai-core/lib/fossil-stdlib" }
fossil-providers = { path = "../../../ikigai-core/lib/fossil-providers" }
fossil-lsp = { path = "../../../ikigai-core/lib/fossil-lsp", features = ["utoipa"] }
fossil-doc = { path = "../../../ikigai-core/lib/fossil-doc" }
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "jwk"] }
x509-parser = { version = "0.16", features = ["verify"] }
pem = "3"
urlencoding = "2"
rcgen = "0.13"
rand_core06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
utoipa = { version = "5", features = ["axum_extras"] }
csv = "1"
oxrdf = "0.3.3"
oxrdfio = "0.2.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

[profile.release]
lto = "thin"
panic = "abort"
strip = "debuginfo"
