[package]
name = "keasy-server"
version = "0.1.0"
description = "Fossil HTTP server for API-driven pipeline execution"
homepage = ""
repository = ""
documentation = ""
license = ""
categories = ["database"]
keywords = [""]
default-run = "keasy-server"
authors = ["Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>"]
edition = "2024"
rust-version = "1.90.0"

[dependencies]
keasy-keycloak = { path = "../keycloak" }
thiserror = "2"
jiff = "0.2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tower-http = { version = "0.6", features = ["trace", "cors", "set-header"] }
tower = { version = "0.5", features = ["util"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
object_store = { version = "0.12", features = ["aws", "gcp", "azure"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
url = "2"
regex = "1"
aes-gcm = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
openidconnect = { version = "4.0", features = ["reqwest"] }
oauth2 = "5.0"
http = "1"
secrecy = { version = "0.10", features = ["serde"] }
tower-sessions = { version = "0.14", features = ["signed"] }
tower-sessions-rusqlite-store = "0.14.1"
time = "0.3"
# The ONLY fossil dependency: the subprocess wire contracts (RunStatus,
# CatalogInput, ProviderInfo), reused verbatim — one source of truth, the
# `fossil` CLI serialises these exact structs and keasy deserialises them. keasy
# links NO fossil compiler/runtime crate: every fossil capability (run, catalog,
# providers) goes through the `fossil` binary over a subprocess. Consumed as a
# git-dep pinned to the rmlext release tag (Renovate bumps it); local dev resolves
# it to the sibling checkout via the [patch] below, so `make dev` never clones the
# private repo.
fossil-run-status = { git = "https://github.com/Kanzo-Tech/fossil-lang.git", tag = "v0.3.0", features = ["utoipa"] }
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "jwk"] }
x509-parser = { version = "0.16", features = ["verify"] }
pem = "3"
urlencoding = "2"
rcgen = "0.13"
rand_core06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
utoipa = { version = "5", features = ["axum_extras"] }
csv = "1"
oxrdf = "0.3.3"
oxrdfio = "0.2.3"
# Server-side DuckLake catalog (W1): keasy is the trusted host of the metadata
# catalog. Pinned to the SAME duckdb as rmlext (1.10502) so writer (keasy) and
# any future reader share a version (I7). `bundled` builds DuckDB from source so
# the binary is self-contained. The catalog is server-side ONLY — the browser
# never attaches ducklake (it reads flat Parquet by signed URL), so the
# version-pin obligation is keasy↔keasy (trivial).
duckdb = { version = "1.10502", features = ["bundled"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

[profile.release]
lto = "thin"
panic = "abort"
strip = "debuginfo"

# The `fossil-run-status` git-dep above resolves through this patch to a sibling
# `rmlext/crates/fossil-run-status` checkout — Cargo uses the patch as the source,
# so it never clones (or authenticates to) the private repo or needs the tag to
# exist. The sibling is the real working tree locally; CI/Docker check out ONLY
# this one contract crate at the pinned tag into the same relative path (not the
# whole rmlext / DuckDB build). Renovate bumps the tag in lockstep with releases.
[patch."https://github.com/Kanzo-Tech/fossil-lang.git"]
fossil-run-status = { path = "../../rmlext/crates/fossil-run-status" }
